--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": ">=5.3",
         "symfony/symfony": "^2.7",
-        "vich/uploader-bundle": "^0.14.0",
+        "vich/uploader-bundle": "^0.14.0|^1.0",
         "liip/imagine-bundle": "^1.3"
     },
     "license": "MIT",
