--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "require": {
         "php": ">=5.3",
-        "symfony/symfony": "^2.7",
+        "symfony/symfony": ">=2.7,<4.0",
         "vich/uploader-bundle": "^0.14.0|^1.0",
         "liip/imagine-bundle": "^1.3"
     },
@@ -12,7 +12,7 @@
     "authors": [
         {
             "name": "Dennis Senn",
-            "email": "info@interface-f.com"
+            "email": "info@webintex.ch"
         }
     ],
     "target-dir": "VichImagineBundle",
