--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "php": ">=5.3",
         "symfony/symfony": ">=2.7,<4.0",
         "vich/uploader-bundle": "^0.14.0|^1.0",
-        "liip/imagine-bundle": "^1.3"
+        "liip/imagine-bundle": "^1.3||^2.0"
     },
     "license": "MIT",
     "authors": [
